test/Execute/SyntaxErrorTest/import_module_missing_alias_name.typh
import math as

"""stderr
syntax error: $FILE:1:13
  expected name after 'as'

    1 |  import math as
                     ^^
"""
